# hello-rust

./: AGENTS.md  Cargo.toml  README.md
topics/01-getting-started/01-hello-world/doc/: README.md
topics/01-getting-started/02-variables-and-mutability/doc/: README.md
topics/01-getting-started/02-variables-and-mutability/src/: main.rs
topics/01-getting-started/03-basic-data-types/: Cargo.toml
topics/01-getting-started/03-basic-data-types/doc/: README.md
topics/01-getting-started/03-basic-data-types/src/: main.rs
topics/01-getting-started/04-tuples-and-arrays/: Cargo.toml
topics/01-getting-started/04-tuples-and-arrays/doc/: README.md
topics/01-getting-started/04-tuples-and-arrays/src/: main.rs
topics/01-getting-started/05-native-threads/: Cargo.toml
topics/01-getting-started/05-native-threads/doc/: README.md
topics/01-getting-started/05-native-threads/src/: main.rs
topics/02-control-flow/01-if-and-loops/: Cargo.toml
topics/02-control-flow/01-if-and-loops/doc/: README.md
topics/02-control-flow/01-if-and-loops/src/: main.rs
topics/02-control-flow/02-for-loops-and-ranges/: Cargo.toml
topics/02-control-flow/02-for-loops-and-ranges/doc/: README.md
topics/02-control-flow/02-for-loops-and-ranges/src/: main.rs
topics/02-control-flow/03-match-basics/: Cargo.toml
topics/02-control-flow/03-match-basics/doc/: README.md
topics/02-control-flow/03-match-basics/src/: main.rs
topics/03-functions/01-basic-functions/: Cargo.toml
topics/03-functions/01-basic-functions/doc/: README.md
topics/03-functions/01-basic-functions/src/: main.rs
(+2 files in other folders)
