[workspace]
resolver = "3"
members = [
    "topics/01-getting-started/01-hello-world",
    "topics/01-getting-started/02-variables-and-mutability",
    "topics/01-getting-started/03-basic-data-types",
    "topics/01-getting-started/04-tuples-and-arrays",
    "topics/01-getting-started/05-native-threads",
    "topics/02-control-flow/01-if-and-loops",
    "topics/02-control-flow/02-for-loops-and-ranges",
    "topics/02-control-flow/03-match-basics",
    "topics/03-functions/01-basic-functions",
    "topics/04-ownership/01-ownership-basics",
]
